# enviroplus-sensors-to-mqtt

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/enviroplussensorstomqtt/: __init__.py  args.py  colors.py  config.py  daemonizer.py  logging.py  main.py  sensor.py
src/tests/: test_basic.py
systemd/: enviroplussensorstomqtt.service
