[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enviroplussensorstomqtt"
version = "0.0.1"
description = "aio library for sending enviroplus sensors data to mqtt"
readme = "README.md"
authors = [
  { name = "Olof Hellqvist", email = "olof.hellqvist@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]
keywords = ["enviroplus", "temperature", "mqtt"]
dependencies = [
    "numpy<2.0.0",
    "enviroplus",
    "paho-mqtt",
    "pyyaml",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/hellqvio86/enviroplus-sensors-to-mqtt"
Download = "https://github.com/hellqvio86/enviroplus-sensors-to-mqtt/archive/v_01.tar.gz"

[project.optional-dependencies]
tests = [
    "pyyaml",
    "pytest",
]

[project.scripts]
enviroplussensorstomqtt = "enviroplussensorstomqtt.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
